--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "author": "Petr Belyakov <keptelr@ya.ru>",
   "license": "MIT",
   "dependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
   },
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/aoc.js",
-    "dev": "ts-node ./src/aoc.ts"
+    "start": "node ./dist/src/aoc.js",
+    "dev": "ts-node ./src/aoc.ts",
+    "test": "jest --watch"
   },
   "devDependencies": {
     "ts-node": "^10.9.2"
