--- a/package.json
+++ b/package.json
@@ -17,6 +17,31 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/src/aoc.js",
+    "start:day01": "ts-node ./src/day01/day01.ts",
+    "start:day02": "ts-node ./src/day02/day02.ts",
+    "start:day03": "ts-node ./src/day03/day03.ts",
+    "start:day04": "ts-node ./src/day04/day04.ts",
+    "start:day05": "ts-node ./src/day05/day05.ts",
+    "start:day06": "ts-node ./src/day06/day06.ts",
+    "start:day07": "ts-node ./src/day07/day07.ts",
+    "start:day08": "ts-node ./src/day08/day08.ts",
+    "start:day09": "ts-node ./src/day09/day09.ts",
+    "start:day10": "ts-node ./src/day10/day10.ts",
+    "start:day11": "ts-node ./src/day11/day11.ts",
+    "start:day12": "ts-node ./src/day12/day12.ts",
+    "start:day13": "ts-node ./src/day13/day13.ts",
+    "start:day14": "ts-node ./src/day14/day14.ts",
+    "start:day15": "ts-node ./src/day15/day15.ts",
+    "start:day16": "ts-node ./src/day16/day16.ts",
+    "start:day17": "ts-node ./src/day17/day17.ts",
+    "start:day18": "ts-node ./src/day18/day18.ts",
+    "start:day19": "ts-node ./src/day19/day19.ts",
+    "start:day20": "ts-node ./src/day20/day20.ts",
+    "start:day21": "ts-node ./src/day21/day21.ts",
+    "start:day22": "ts-node ./src/day22/day22.ts",
+    "start:day23": "ts-node ./src/day23/day23.ts",
+    "start:day24": "ts-node ./src/day24/day24.ts",
+    "start:day25": "ts-node ./src/day25/day25.ts",
     "dev": "ts-node ./src/aoc.ts",
     "test": "jest"
   },
